k8s-dac/helloword-with-label.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: busybox
  namespace: test
  labels:
    app: busybox
    k8s-dac: hello
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: busybox
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
        - name: busybox
          # local setup for testing
          image: busybox
          imagePullPolicy: IfNotPresent
          command: [ "sleep", "infinity" ]
