k8s-dac/webhook-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webhook-server
  labels:
    app: webhook-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webhook-server
  template:
    metadata:
      labels:
        app: webhook-server
    spec:
      containers:
        - name: webhook-server
          # local setup for testing
          image: webhook-server:v0.0.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - name: webhook-tls-certs
              mountPath: /run/secrets/tls
              readOnly: true
      volumes:
        - name: webhook-tls-certs
          secret:
            secretName: webhook-server-tls

---
apiVersion: v1
kind: Service
metadata:
  name: webhook-server-svc
  namespace: devops
spec:
  selector:
    app: webhook-server
  ports:
    - port: 8080
      targetPort: 8080
