k8s-dac/mutating-webhook-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: webhook-server
webhooks:
  - name: webhook-server-svc.devops.svc
    failurePolicy: Ignore
    sideEffects: None
    admissionReviewVersions: ["v1", "v1beta1"]
    clientConfig:
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURNVENDQWhtZ0F3SUJBZ0lKQU9wU0F5TG5OTkpPTUEwR0NTcUdTSWIzRFFFQkN3VUFNQzh4TFRBckJnTlYKQkFNTUpFRmtiV2x6YzJsdmJpQkRiMjUwY205c2JHVnlJRmRsWW1odmIyc2dSR1Z0YnlCRFFUQWVGdzB5TkRBMwpNVFF4TURBeU1qRmFGdzB5TkRBNE1UTXhNREF5TWpGYU1DOHhMVEFyQmdOVkJBTU1KRUZrYldsemMybHZiaUJECmIyNTBjbTlzYkdWeUlGZGxZbWh2YjJzZ1JHVnRieUJEUVRDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVAKQURDQ0FRb0NnZ0VCQVA0MjJ1anFhV0k4Z2lhS1BzdmhHdDFnUC9kMTl1bnpudDM5clRrSU9HWGRNMHRjRExYNgp2b29hdU4vQit [...]
      service:
        namespace: devops
        name: webhook-server-svc
        path: /mutating
        port: 8080
    rules:
      - operations: ["CREATE", "UPDATE"]
        apiGroups: ["apps"]
        apiVersions: ["v1", "v1beta1"]
        resources: ["deployments"]
        scope: "Namespaced"
